@@ -252,6 +252,7 @@ wxMSW:
 
 - fixed UNC paths handling in wxFileSystem (Daniel Nash)
 - set wxKeyEvent::m_uniChar in Unicode build
+- support for alpha channel in toolbar bitmaps (Jurgen Doornik)
 
 wxWinCE:
 
